# passm

./: .gitignore  Cargo.toml  LICENSE  README.md
.passm/: .config.toml  .default.config.toml  .private_1
crates/config/: Cargo.toml
crates/config/src/: config.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  exporter.rs  files.rs  lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: exporter.rs  lib.rs  signer.rs
crates/shared/: Cargo.toml
crates/shared/src/: console.rs  events.rs  lib.rs  password.rs  state.rs
crates/storage/: Cargo.toml
crates/storage/src/: ipfs.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  event_loop.rs  lib.rs  ui.rs
crates/ui/src/widgets/: help_tab.rs  labeled_input.rs  mod.rs  passwords_list.rs
