[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", features = [] }
simple_logger = "4.0.0"
anyhow = "1.0.66"
tokio = { version = "1", features = ["full"] }
shared = { version = "0.1.0", path = "../shared" }
ui = { version = "0.1.0", path = "../ui" }
