[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgp = "0.9.0"
smallvec = "1.8.0"
chrono = "0.4.23"
anyhow = "1.0.66"
rand = "0.8.5"
rsa = "0.7.2"
simple_logger = "4.0.0"
log = { version = "0.4.14", features = [] }


