[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["crossterm-backend"]
crossterm-backend = ["tui/crossterm", "crossterm"]

[dependencies]
tui = "0.19"
crossterm = { version = "0.25.0", optional = true, default-features = false, features = [
  "event-stream",
] }
log = { version = "0.4.14", features = [] }
simple_logger = "4.0.0"
anyhow = "1.0.66"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.3"
futures = "0.3.21"
shared = { version = "0.1.0", path = "../shared" }
